--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,16 +8,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-  	<div class='container'>
-  		<div class='row'>
-  			<div class='col-6 mx-auto'>
-			    <h1>Hello, world!</h1>
-			</div>
-		</div>
-	</div>
+    <title>{% block head_title %}
+              {% endblock %}</title>
+      </head>
+      <body>
+      	<div class='container'>
+      		<div class='row'>
+      			<div class='col-6 mx-auto'>
+    			    <h1>{{title}}</h1>
+              {% block content %}
+              {% endblock %}
+    			</div>
+    		</div>
+    	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
