--- a/src/blog/templates/blog/list.html
+++ b/src/blog/templates/blog/list.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 
+<div class="row">
 	{% for object in object_list %}
-		<li>{{ object.title  }}</li>
+		{% include 'blog/inline.html' with blog_post=object truncate=True %}
 	{% endfor %}
+</div>
 
 {% endblock %}
