--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,15 +12,10 @@
               {% endblock %}</title>
       </head>
       <body>
-      	<div class='container'>
-      		<div class='row'>
-      			<div class='col-6 mx-auto'>
-              {% block content %}
-
-              
-              {% endblock %}
-    			</div>
-    		</div>
+        {% include 'navbar.html' %}
+      	<div class='container-fluid'>
+            {% block content %}
+            {% endblock %}
     	</div>
 
     <!-- Optional JavaScript -->
