--- a/src/blog/templates/blog/inline.html
+++ b/src/blog/templates/blog/inline.html
@@ -1,8 +1,9 @@
 
 <div class="col-12 col-md-10 mb-5 mx-auto">
-<div class="card">
+<div class="card {% if not blog_post.publish_date %} border border-warning text-dark {% endif %}">
 	<div class="card-body">
 		<h5 class="card-title">{{blog_post.title}}</h5>
+			<small class="text-muted">Published {{blog_post.publish_date}}</small>
 		{% if truncate %}
 			<p class="card-text">{{blog_post.content|linebreaks|truncatewords:30 }}</p>
 		{% else %}
@@ -10,6 +11,7 @@
 		{% endif %}
 
 		{% if not detail %}
+			{% if not blog_post.publish_date %} Draft {% endif %}
 			<a href="{{blog_post.get_absolute_url}}">Read more</a>
 		{% endif %}
 
